fixed inputs vertical alignment

--- a/web-app/less/grails-buttons.less
+++ b/web-app/less/grails-buttons.less
@@ -92,7 +92,7 @@
 }
 
 input.btn {
-	margin-bottom: 4px;
+	margin-bottom: 0px;
 }
 
 // Hover state
